# tree-sitter-fc

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFc/: fc.h
bindings/swift/TreeSitterFcTests/: TreeSitterFcTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: test_expr.txt  test_module_level.txt  test_stmt.txt
